[package]
name = "raytracing"
version = "0.1.0"
edition = "2024"
authors = ["Tung Nguyen"]
description = "A simple multi-threaded Rust ray tracing demo"

[dependencies]
miniquad = "0.4.7"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units = 1
lto = "thin"
strip = "debuginfo"
